# imp2importlib

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/imp/: __init__.py  find_module.py
tests/: test_find_module.py  test_load_source.py
