[project]
name = "imp2importlib"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Waket Zheng", email = "waketzheng@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "mypy>=1.4.1",
    "pytest>=7.4.4",
]
