[project]
name = "imp2importlib"
version = "0.1.1"
description = "Fixes `ModuleNotFoundError: No module named 'imp'` for Python3.12+"
authors = [{name = "Waket Zheng", email = "waketzheng@gmail.com"}]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
dependencies = []
keywords = ["imp", "importlib"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/waketzheng/imp2importlib"
repository = "https://github.com/waketzheng/imp2importlib.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "coverage>=7.2.7",
    "mypy>=1.4.1",
    "pytest>=7.4.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Allow single quotes for strings.
quote-style = "preserve"

[tool.ruff.lint.per-file-ignores]
"find_module.py" = ["SIM115"]
